# robocon24-web-testing-project

./: .gitignore  pyproject.toml  robot_arguments.txt  test.robot
resources/pages/: login_page.resource
resources/utils/: browser_management.resource
