[tool.poetry]
name = "robocon24-web-testing-project"
version = "0.1.0"
description = "RoboCon 2024 Tutorial - Creating a Web Testing Framework with Robot Framework and Browser Library"
authors = ["Aarne Harju <aarne.harju@sogeti.com>"]
license = "GNU V3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
robotframework = "^7.0"
robotframework-browser = "^18.4.0"
PyYAML = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
